# introduction-to-python-and-pandas

./: .gitignore  README.md  article.md  config.yaml  main.py  pyproject.toml
.github/workflows/: ci.yml
data/: EnergyData.xlsx  MER_T02_01.csv
scripts/: generate_sample_data.py
src/: __init__.py  advanced.py  data_io.py  dataframe_ops.py  pandas_structures.py  python_basics.py  visualization.py
tests/: conftest.py  test_advanced.py  test_data_io.py  test_dataframe_ops.py  test_dataframe_ops_extended.py  test_integration.py  test_pandas_structures.py  test_python_basics.py  test_visualization.py
