[project]
name = "introduction-to-python-and-pandas"
version = "0.2.0"
description = "Runnable Python and Pandas tutorial from the Medium article"
readme = "README.md"
license = "MIT"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.10.0",
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "openpyxl>=3.1.5",
    "pandas>=3.0.3",
    "pyyaml>=6.0.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3",
    "ruff>=0.8",
]

[project.scripts]
pandas-intro = "main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.hatch.build.targets.wheel.force-include]
"main.py" = "main.py"
"config.yaml" = "config.yaml"

[tool.uv]
package = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests", "main.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
